; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_vga.c_PrintCursorVga.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_vga.c_PrintCursorVga.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@PrintCursorVga.count = internal global i32 0, align 4
@wWindow = common dso_local global %struct.TYPE_2__* null, align 8
@OUTPUT_WINDOW = common dso_local global i64 0, align 8
@GLOBAL_SCREEN_WIDTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PrintCursorVga(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wWindow, align 8
  %8 = load i64, i64* @OUTPUT_WINDOW, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %5, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wWindow, align 8
  %13 = load i64, i64* @OUTPUT_WINDOW, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wWindow, align 8
  %18 = load i64, i64* @OUTPUT_WINDOW, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %16, %21
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* @PrintCursorVga.count, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* @PrintCursorVga.count, align 4
  %25 = icmp sgt i32 %23, 250
  br i1 %25, label %26, label %43

26:                                               ; preds = %1
  store i32 0, i32* @PrintCursorVga.count, align 4
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* @GLOBAL_SCREEN_WIDTH, align 4
  %29 = mul nsw i32 %27, %28
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %29, %30
  store i32 %31, i32* %3, align 4
  %32 = call i32 @outb_p(i32 14, i32 980)
  %33 = load i32, i32* %3, align 4
  %34 = ashr i32 %33, 8
  %35 = and i32 %34, 255
  store i32 %35, i32* %4, align 4
  %36 = load i32, i32* %4, align 4
  %37 = call i32 @outb_p(i32 %36, i32 981)
  %38 = call i32 @outb_p(i32 15, i32 980)
  %39 = load i32, i32* %3, align 4
  %40 = and i32 %39, 255
  store i32 %40, i32* %4, align 4
  %41 = load i32, i32* %4, align 4
  %42 = call i32 @outb_p(i32 %41, i32 981)
  br label %43

43:                                               ; preds = %26, %1
  ret void
}

declare dso_local i32 @outb_p(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
